--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Ola, meu nome é</div>
-                <div class="text-2">Ricardo Ferreira</div>
+                <div class="text-1">Olá, meu nome é</div>
+                <div class="text-2">Elenilton Fabiano</div>
                 <div class="text-3">eu sou <span class="typing"></span></div>
                 <a href="#">Contratar-me</a>
             </div>
