--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                     <img src="image/img-1.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">Sou Ricardo e sou <span class="typing-2"></span></div>
+                    <div class="text">Sou Nilton e sou <span class="typing-2"></span></div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro doloribus minus eum sed ex. Pariatur voluptate fugit officia nobis nemo nihil reiciendis, similique quas ut tempore adipisci debitis corrupti rerum molestiae placeat excepturi blanditiis assumenda quis suscipit! Vel facilis maiores doloremque perferendis inventore tempore molestiae, sit ipsa blanditiis animi nostrum qui, atque architecto voluptatum cum cupiditate aliquid eius voluptatem id!</p>
-                    <a href="#">Download CV</a>
+                    <a href="/pdf/Currículo Elenilton.pdf" download="curriculo_Elenilton">Download CV</a>
                 </div>
             </div>
         </div>
