Correção de erros de digitação

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio  | Elenilton</title>
+    <title>Portfólio  | devNilton</title>
     
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,7 +14,7 @@
     </div>
     <div class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Port<span>fólio</span></a></div>
+            <div class="logo"><a href="#">dev<span>Nilton</span></a></div>
             <ul class="menu">
                 <li><a href="#home">Inicio</a></li>
                 <li><a href="#about">Sobre</a></li>
@@ -36,7 +36,7 @@
                 <div class="text-1">Olá, meu nome é</div>
                 <div class="text-2">Elenilton Fabiano</div>
                 <div class="text-3">eu sou <span class="typing"></span></div>
-                <a href="#">Contratar-me</a>
+                <a href="#contact">Contratar-me</a>
             </div>
         </div>
     </section>
@@ -248,7 +248,7 @@
 
     <!--sessão  footer-->
     <footer>
-        <span>Criado por <a href="#">Front</a> | Todos os direitos reservado 2021</span>
+        <span>Criado por <a href="#">devNilton </a> | Todos os direitos reservado 2021</span>
     </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
