--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="text-1">Olá, meu nome é</div>
                 <div class="text-2">Elenilton Fabiano</div>
                 <div class="text-3">eu sou <span class="typing"></span></div>
-                <a href="#contact">Contratar-me</a>
+                <a href="https://www.linkedin.com/in/elenilton-fabiano-2b710b1ba/">Contratar-me</a>
             </div>
         </div>
     </section>
@@ -248,7 +248,7 @@
 
     <!--sessão  footer-->
     <footer>
-        <span>Criado por <a href="#">devNilton </a> | Todos os direitos reservado 2021</span>
+        <span>Criado por <a href="https://github.com/devnilton">devNilton </a> | Todos os direitos reservado 2023</span>
     </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
