--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
     <!--sessão  footer-->
     <footer>
-        <span>Criado por <a href="https://github.com/devnilton">devNilton </a> | Todos os direitos reservado 2023</span>
+        <span>Criado por <a href="https://github.com/devnilton">devNilton </a> | &copy; Todos os direitos reservados 2023</span>
     </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
