Mudando imagem do sobre

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h2 class="title">Sobre</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="image/img-1.jpg" alt="">
+                    <img src="image/img-1.png" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">Sou Nilton e sou <span class="typing-2"></span></div>
@@ -144,7 +144,7 @@
      <!--sessão equipe-->
      <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">Minha Equipe</h2>
+            <h2 class="title">Projetos Pessoais</h2>
            <div class="carousel owl-carousel ">
                <div class="card">
                    <div class="box">
