--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                 </div>
                 <div class="column right">
                     <div class="text">Sou Nilton e sou <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro doloribus minus eum sed ex. Pariatur voluptate fugit officia nobis nemo nihil reiciendis, similique quas ut tempore adipisci debitis corrupti rerum molestiae placeat excepturi blanditiis assumenda quis suscipit! Vel facilis maiores doloremque perferendis inventore tempore molestiae, sit ipsa blanditiis animi nostrum qui, atque architecto voluptatum cum cupiditate aliquid eius voluptatem id!</p>
+                    <p>Graduado em Análise e Desenvolvimento de Sistemas (UCB) e Pós-graduando em Engenharia de Software (Faculdade Focus).
+                        Extremamente apaixonado por inovação, tecnologia e educação. 
+                        Desenvolvedor front-end criativo, proativo, curioso, aberto a mudanças e bastante dedicado a aprender coisas novas. 
+                        Tenho conhecimentos em: HTML5, CSS3, Javascript, ReactJS e GIT/GITHUB</p>
                     <a href="/pdf/Currículo Elenilton.pdf" download="curriculo_Elenilton">Download CV</a>
                 </div>
             </div>
