Mudança de ícones na sessão de serviços

--- a/index.html
+++ b/index.html
@@ -69,23 +69,23 @@
                <div class="card">
                    <div class="box">
                     <ion-icon name="brush-outline"></ion-icon>
-                    <div class="text">Web Design</div>
+                    <div class="text">Design de Logotipo</div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
                    </div>
                </div>
 
                <div class="card">
                 <div class="box">
-                    <ion-icon name="trending-up-outline"></ion-icon>
-                 <div class="text">Anúncios</div>
+                    <ion-icon name="code-outline"></ion-icon>
+                 <div class="text">Desenvolvimento de Páginas Web</div>
                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
                 </div>
             </div>
 
             <div class="card">
                 <div class="box">
-                    <ion-icon name="code-outline"></ion-icon>
-                 <div class="text">Design de Apps</div>
+                    <ion-icon name="desktop-outline"></ion-icon>
+                 <div class="text">Web Design</div>
                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
                 </div>
             </div>
