--- a/index.html
+++ b/index.html
@@ -114,23 +114,23 @@
                    <div class="bars">
                     <div class="info">
                         <span>CSS</span>
-                        <span>85%</span>
+                        <span>90%</span>
                     </div>
                     <div class="line css"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
                         <span>JavaScript</span>
-                        <span>87%</span>
+                        <span>75%</span>
                     </div>
                     <div class="line js"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
-                        <span>PHP</span>
+                        <span>Java</span>
                         <span>47%</span>
                     </div>
-                    <div class="line php"></div>
+                    <div class="line java"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
