correções na sessão de projetos pessoais

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#services">Serviços</a></li>
                 <li><a href="#skills">Especialidade</a></li>
-                <li><a href="#teams">Equipe</a></li>
+                <li><a href="#project">Projetos</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
             <div class="menu-btn">
@@ -145,13 +145,13 @@
     </section>
 
      <!--sessão equipe-->
-     <section class="teams" id="teams">
+     <section class="project" id="project>
         <div class="max-width">
             <h2 class="title">Projetos Pessoais</h2>
            <div class="carousel owl-carousel ">
                <div class="card">
                    <div class="box">
-                       <img src="image/img-1.jpg" alt="">
+                       <img src="image/img-1.png" alt="">
                        <div class="text">Gustavo</div>
                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
                    </div>
