Adição e estilização de mais um elemento no campo de especialidades

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                    <div class="box">
                     <ion-icon name="brush-outline"></ion-icon>
                     <div class="text">Design de Logotipo</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
+                    <p>Criar um logotipo nem sempre é uma tarefa simples. Mas, é importante utilizar um logo que represente a sua marca, que seja reconhecida pelos seus clientes.</p>
                    </div>
                </div>
 
@@ -78,7 +78,7 @@
                 <div class="box">
                     <ion-icon name="code-outline"></ion-icon>
                  <div class="text">Desenvolvimento de Páginas Web</div>
-                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
+                 <p>Ao criar um site, você facilita que um consumidor em potencial encontre os canais para contato e possa prosseguir em sua jornada de compra.</p>
                 </div>
             </div>
 
@@ -86,7 +86,7 @@
                 <div class="box">
                     <ion-icon name="desktop-outline"></ion-icon>
                  <div class="text">Web Design</div>
-                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
+                 <p>Um site bonito, que utiliza das técnicas corretas de UI e UX design, pode atrair ainda mais clientes para o seus empreendimento.</p>
                 </div>
             </div>
             </div>
@@ -100,7 +100,8 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">Minhas habilidades criativas e experiencias</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod assumenda consequatur facere eius distinctio deleniti reiciendis aliquam architecto suscipit, at, dolores dicta sed adipisci laborum, totam dolorum enim maxime aliquid eos. Ullam, et maiores porro voluptatum explicabo deleniti sint rem quam! Delectus iste ut hic, molestias adipisci totam ipsum reiciendis quam voluptatem nisi cumque saepe ea cupiditate. Vel, quae est!</p>
+                    <p>Desenvolvedor front-end criativo, proativo, curioso, aberto a mudanças e bastante dedicado a aprender coisas novas.<br> 
+                        Tenho conhecimentos em: HTML5, CSS3, Javascript, ReactJS, Java e GIT/GITHUB.</p>
                     <a href="#">Mais informações</a>
                 </div>
                 <div class="column right">
@@ -127,18 +128,26 @@
                 </div>
                 <div class="bars">
                     <div class="info">
+                        <span>GIT/GITHUB</span>
+                        <span>65%</span>
+                    </div>
+                    <div class="line git"></div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>React.JS</span>
+                        <span>55%</span>
+                    </div>
+                    <div class="line react"></div>
+                </div>
+                <div class="bars">
+                    <div class="info">
                         <span>Java</span>
                         <span>47%</span>
                     </div>
                     <div class="line java"></div>
                 </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>MySQL</span>
-                        <span>42%</span>
-                    </div>
-                    <div class="line mysql"></div>
-                </div>
+                
                 </div>
             </div>
         </div>
