--- a/index.html
+++ b/index.html
@@ -204,28 +204,28 @@
             <div class="contact-content">
                <div class="column left">
                    <div class="text">Fale Conosco</div>
-                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit laudantium saepe, voluptate libero fugiat in, dolores voluptatem distinctio animi et iusto, amet possimus tenetur modi cupiditate. Odio, numquam fuga perferendis vitae ullam eum, ipsam tempora unde nisi optio vero recusandae ipsa asperiores rem, labore impedit laudantium officiis maiores natus.</p>
+                   <p>A sua opinião é muito importante para mim. Por favor, entre em contato caso tenha alguma dúvida ou precise de algum dos meus serviços. Estarei atento para responder o mais rápido possível. Obrigado!</p>
                
                <div class="icons">
                    <div class="row">
                         <ion-icon name="person-outline"></ion-icon>
                         <div class="info">
                             <div class="head">Nome</div>
-                            <div class="sub-title">Ricardo Ferreira</div>
+                            <div class="sub-title">Elenilton Fabiano</div>
                         </div>
                    </div>
                    <div class="row">
                     <ion-icon name="earth-outline"></ion-icon>
                     <div class="info">
                         <div class="head">Endereço</div>
-                        <div class="sub-title">Campo Grande, MS</div>
+                        <div class="sub-title">Recife, PE</div>
                     </div>
                </div>
                <div class="row">
                 <ion-icon name="person-outline"></ion-icon>
                 <div class="info">
                     <div class="head">Email</div>
-                    <div class="sub-title">aeiou@gmail.com</div>
+                    <div class="sub-title">eleniltonfabian@gmail.com</div>
                 </div>
            </div>
                </div>
