--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                </div>
                <div class="card">
                 <div class="box">
-                    <img src="image/img-2.jpg" alt="">
+                    <img src="image/img-2.png" alt="">
                     <div class="text">Fernando</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
                 </div>
