adicionando o target no link do contratar-me

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="text-1">Olá, meu nome é</div>
                 <div class="text-2">Elenilton Fabiano</div>
                 <div class="text-3">eu sou <span class="typing"></span></div>
-                <a href="https://www.linkedin.com/in/elenilton-fabiano-2b710b1ba/">Contratar-me</a>
+                <a href="https://www.linkedin.com/in/elenilton-fabiano-2b710b1ba/" target="_blank" rel="noopener noreferrer" >Contratar-me</a>
             </div>
         </div>
     </section>
