Implementando o envio da  resposta de formulário ao meu email

--- a/index.html
+++ b/index.html
@@ -239,13 +239,13 @@
             </div><!--column left-->
             <div class="column rigth">
                 <div class="text">Mensagem</div>
-                <form action="#">
+                <form action="https://formsubmit.co/eleniltonfabian@gmail.com" method="POST">
                     <div class="fields">
                         <div class="field name">
-                            <input type="text" placeholder="Nome" required>
+                            <input name="Nome" type="text" placeholder="Nome" required>
                         </div>
                         <div class="field email">
-                            <input type="email" placeholder="Email" required>
+                            <input name="Email" type="email" placeholder="Email" required>
                         </div>
                     </div>
                     <div class="field">
@@ -253,7 +253,7 @@
                             <input type="text" placeholder="Sobrenome" required>
                         </div>
                         <div class="field textarea">
-                           <textarea  cols="30" rows="10" placeholder="Escrever...." required></textarea>
+                           <textarea name="message" cols="30" rows="10" placeholder="Escrever...." required></textarea>
                         </div>
                         <div class="button">
                             <button type="submit">Enviar</button>
