--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio  | devNilton</title>
-    
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/image/icone-aba.png">
 </head>
 <body>
     <div class="scroll-up-btn">
