modificação dos textos no projeto pessoal

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     
                        <img src="image/img-4.png" alt="">
                        <div class="text">Portfólio  | devNilton </div>
-                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
+                       <p>Projeto desenvolvido com HTML, CSS e JavaScript, com o intuito de mostrar um pouco minhas habilidades e expôr meu aprendizado.</p>
                     
                    </div>
                 </a>
@@ -176,7 +176,7 @@
                     <div class="box">
                         <img src="image/img-2.png" alt="">
                         <div class="text">Alura-Plus</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
+                        <p>Projeto de landing page desenvolvido em uma das imersões da Alura, onde pude desenvolver habilidades com HTML e CSS (Flexbox e Grid).</p>
                     </div>
                 </a>
             </div>
@@ -185,7 +185,8 @@
                     <div class="box">
                         <img src="image/img-3.png" alt="">
                         <div class="text">Tiro-ao-Alvo</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
+                        <p>Lógica de programação e JavaScript foram utilizados para desenvolver esse simples jogo, clique aqui e veja se consegue acertar o alvo.<br>
+                        </p>
                     </div>
                 </a>
             </div>
@@ -194,7 +195,7 @@
                     <div class="box">
                         <img src="image/img-5.png" alt="">
                         <div class="text">Apeperia</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
+                        <p>Projeto desenvolvido em um dos cursos da Alura, onde pude desenvolver habilidades com HTML e CSS (Flexbox e Grid).</p>
                     </div>
                 </a>
             </div>
