mudança nos links dos projetos

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
            <div class="carousel owl-carousel ">
                 
                <div class="card">
-                <a href="https://www.linkedin.com/in/elenilton-fabiano-2b710b1ba/">
+                <a href="index.html">
                    <div class="box">
                     
                        <img src="image/img-4.png" alt="">
@@ -181,7 +181,7 @@
                 </a>
             </div>
             <div class="card">
-                <a href="https://www.linkedin.com/in/elenilton-fabiano-2b710b1ba/" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/devnilton/Tiro-ao-Alvo" target="_blank" rel="noopener noreferrer">
                     <div class="box">
                         <img src="image/img-3.png" alt="">
                         <div class="text">Tiro-ao-Alvo</div>
@@ -191,7 +191,7 @@
                 </a>
             </div>
             <div class="card">
-                <a href="https://www.linkedin.com/in/elenilton-fabiano-2b710b1ba/" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/devnilton/Apeperia" target="_blank" rel="noopener noreferrer">
                     <div class="box">
                         <img src="image/img-5.png" alt="">
                         <div class="text">Apeperia</div>
