corrigindo o sobre mim

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Sou Nilton e sou <span class="typing-2"></span></div>
-                    <p>Graduado em Análise e Desenvolvimento de Sistemas (UCB) e Pós-graduando em Engenharia de Software (Faculdade Focus).
+                    <p>Graduado em Análise e Desenvolvimento de Sistemas (UCB) e Pós-graduando em Engenharia de Software.
                         Extremamente apaixonado por inovação, tecnologia e educação. 
                         Desenvolvedor front-end criativo, proativo, curioso, aberto a mudanças e bastante dedicado a aprender coisas novas. 
                         Tenho conhecimentos em: HTML5, CSS3, Javascript, ReactJS e GIT/GITHUB</p>
