correção no id projetc

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </section>
 
      <!--sessão equipe-->
-     <section class="project" id="project>
+     <section class="project" id="project">
         <div class="max-width">
             <h2 class="title">Projetos Pessoais</h2>
            <div class="carousel owl-carousel ">
