correção de ortografia

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h2 class="title">Especialidades</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">Minhas habilidades criativas e experiencias</div>
+                    <div class="text">Minhas habilidades criativas e experiências</div>
                     <p>Desenvolvedor front-end criativo, proativo, curioso, aberto a mudanças e bastante dedicado a aprender coisas novas.<br> 
                         Tenho conhecimentos em: HTML5, CSS3, Javascript, ReactJS, Java e GIT/GITHUB.</p>
                     <a href="#">Mais informações</a>
